<resources>
    <string name="app_name">Pesona Indonesia</string>
    <string name="title_galery">Galery</string>
    <string name="title_add">Tambah</string>
    <string name="title_home">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="judul">Judul</string>

    <!--Error message-->
    <string name="msg_cannot_allow_empty_field">msg_cannot_allow_empty_field</string>


    <string name="permission_dialog">Accessing Location Permissions required</string>
    <string name="go_to_permissions_settings">Go to App settings and enable permissions</string>


    <!--DETAIL ACTIVITY-->
    <string name="nama">Nama Foto</string>
    <string name="lokasi">Lokasi</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="lat">Lattitude</string>
    <string name="lng">Longitude</string>
    <string name="Pi">Pesona Indonesia</string>
    <string name="konten">Deskripsi Pesona Indonesia</string>
    <string name="alamat">Alamat</string>
    <string name="unduh">Unduh</string>
    <string name="Item" />
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>

    <string name="action_settings">Settings</string>
    <string name="load">Mengambil data</string>
    <string name="item">Item</string>

</resources>
