<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/fotoDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/photo" />

            <TextView
                android:id="@+id/alamatDetail"
                style="@style/TextContent.Small.White"
                android:layout_gravity="bottom"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="@dimen/cardview_default_elevation"
                android:background="#4D000000"
                android:drawableLeft="@drawable/location"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:text="@string/Pi"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textSize="24sp"
                app:fontFamily="cursive" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/namaDetail"
                style="@style/TextContent.Black"
                android:layout_width="369dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_weight="1"
                android:text="@string/nama"
                android:textSize="32sp"
                app:fontFamily="sans-serif-smallcaps" />

            <ImageView
                android:id="@+id/favorit_img"
                android:layout_width="168dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/star_default"
                tools:ignore="VectorDrawableCompat" />
        </LinearLayout>

        <TextView
            style="@style/TextContent.Subtitle"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/deskripsi"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/deskripsiDetail"
            style="@style/TextContent"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:lineSpacingMultiplier="1"
            android:text="@string/konten"
            android:textColor="@android:color/black" />

        <TextView
            style="@style/TextContent.Subtitle"
            android:layout_marginBottom="8dp"
            android:text="Alamat"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/alamatlenkapDetail"
            style="@style/TextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:lineSpacingMultiplier="1"
            android:text="@string/alamat"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/lokasi"
            style="@style/TextContent.Subtitle"
            android:layout_marginBottom="8dp"
            android:text="@string/lokasi"
            android:textColor="@color/colorAccent" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/cardview_compat_inset_shadow"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:id="@+id/textLat"
                    style="@style/TextSpec.Field"
                    android:text="@string/lat" />

                <TextView
                    android:id="@+id/latDetail"
                    style="@style/TextSpec.Value"
                    android:text="@string/lat" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/lng" />

                <TextView
                    android:id="@+id/lngDetail"
                    style="@style/TextSpec.Value"
                    android:text="@string/lng"
                    tools:text="@string/lng" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

            </TableRow>
        </TableLayout>

        <!--<RelativeLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginLeft="@dimen/activity_horizontal_margin"-->
            <!--android:layout_marginRight="@dimen/activity_horizontal_margin"-->
            <!--android:layout_marginBottom="@dimen/activity_vertical_margin">-->
            <!--<de.hdodenhof.circleimageview.CircleImageView-->
                <!--android:layout_width="56dp"-->
                <!--android:layout_height="56dp"-->
                <!--android:src="@drawable/photo"-->
                <!--android:layout_centerVertical="true"-->
                <!--android:id="@+id/profile_image"-->
                <!--android:layout_marginRight="@dimen/activity_horizontal_margin"/>-->
            <!--<TextView-->
                <!--style="@style/TextContent"-->
                <!--android:layout_toRightOf="@id/profile_image"-->
                <!--android:text="@string/Pi"-->
                <!--android:layout_centerVertical="true"/>-->


        <!--</RelativeLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <!--<Button-->
                    <!--android:id="@+id/btn_download"-->
                    <!--style="@style/ButtonGeneral"-->
                    <!--android:layout_width="176dp"-->
                    <!--android:drawableLeft="@drawable/download"-->
                    <!--android:layout_weight="1"-->
                    <!--android:text="@string/unduh" />-->

            <Button
                android:id="@+id/btn_share"
                style="@style/ButtonGeneral"
                android:layout_width="170dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/share"
                android:text="Share" />
        </LinearLayout>
    </LinearLayout>

</ScrollView >